site/styles.css
/* ... */
.big-button:hover {
  background-color: #1f1f1f;
}

.big-button a {
  color: var(--colorPrimary);
  text-decoration: none;
}

@media (min-width: 768px) {
  .buttons-section {
    flex-direction: row;
  }
}

.centered-content-section {
  max-width: 920px;
  margin: auto;
  display: flex;
  align-items: center;
  justify-content: center;
  text-align: center;
  padding: 2rem;
  flex-direction: column;
}

.image-section {
  width: 90%;
  max-width: 820px;
  margin: auto;
}

.image-section-small {
  width: 90%;
  max-width: 550px;
  margin: auto;
}

.image-tags {
  width: 90%;
  max-width: 700px;
  margin: auto;
  height: auto;
  display: block;
  text-align: center;
}

#lotus {
  max-width: 920px;
  margin: auto;
  display: flex;
  align-items: center;
  justify-content: center;
  text-align: center;
  padding: 2rem;
  flex-direction: column;
  margin-bottom: 10rem;
  background-image: url('media/lotus.jpeg');
  background-position: center;
  background-repeat: no-repeat;
  background-size: 420px;
  padding-bottom: 4rem;
}

#rules {
  border: 2px solid;
  border-color: red;
  max-width: 920px;
  margin: auto;
  display: flex;
  align-items: center;
  justify-content: center;
  text-align: center;
  padding: 2rem;
  flex-direction: column;
  margin-bottom: 10rem;
  background-image: url('media/rules.png');
  background-position: right 20px bottom 10px;
  background-repeat: no-repeat;
  background-size: 420px;
  padding-bottom: 4rem;
}

#rules h3 {
  color: red;
  background-color: #000;
  font-family: sans-serif;
}

#rules h6 {
  background-color: #000;
  padding: 2px 5px;
}

.text-section {
  padding: 4rem;
}
.text-section h3 {
  max-width: 600px;
  margin: 0 auto;
  line-height: 1.6;
}
.text-section p {
  max-width: 600px;
  margin: 0 auto;
  line-height: 1.6;
}
.text-section ul {
  max-width: 600px;
  margin: 0 auto;
  line-height: 1.6;
}
.text-section li {
  max-width: 600px;
  margin: 0 auto;
  margin-left: 1rem;
  margin-bottom: 1rem;
  line-height: 1.6;
}

#evolution {
  line-height: 1.6;
  padding: 1rem;
  padding-top: 5rem;
  /* width: 100%; */
  text-align: center;
  max-width: 700px;
  margin: 0 auto;
}
#evolution-pyramid {
  text-align: center;
}
.pyramid-row {
  display: flex;
  align-items: center; /* Vertically aligns the content */
  justify-content: flex-start; /* Starts from the left */
  margin-bottom: 50px;
}
.pyramid-label {
  white-space: nowrap; /* Prevents wrapping to a new line */
  margin-right: 10px;
  text-align: left;
  flex-shrink: 0; /* Prevents the label from shrinking */
  min-width: 6rem;
  font-weight: bold;
  font-size: 1.2rem;
  color: gray;
}
.pyramid-text {
  text-align: center;
  flex-grow: 1; /* Allows text to take up the remaining space */
  word-spacing: -2px;
  letter-spacing: -1px;
}

#instances {
  padding: 4rem;
}
#instances h3 {
  max-width: 600px;
  margin: 0 auto;
  line-height: 1.6;
}
#instances p {
  max-width: 600px;
  margin: 0 auto;
  line-height: 1.6;
}

#tech {
  padding: 4rem;
}
#tech h3 {
  max-width: 600px;
  margin: 0 auto;
  line-height: 1.6;
}
#tech p {
  max-width: 600px;
  margin: 0 auto;
  line-height: 1.6;
}

html {
  scroll-behavior: smooth;
}

#timeline {
  padding: 4rem;
}
#timeline h3 {
  max-width: 500px;
  margin: 0 auto;
  line-height: 1.6;
}
#timeline h6 {
  max-width: 500px;
  margin: 0 auto;
  line-height: 1.6;
}
#timeline p {
  max-width: 500px;
  margin: 0 auto;
  line-height: 1.6;
}

#tokenomics {
  padding: 2rem;
}
#tokenomics h3 {
  max-width: 600px;
  margin: 0 auto;
  line-height: 1.6;
}
#tokenomics h6 {
  max-width: 600px;
  margin: 0 auto;
  line-height: 1.6;
}
#tokenomics p {
  max-width: 600px;
  margin: 0 auto;
  line-height: 1.6;
}

@media (min-width: 768px) {
  #tokenomics {
    padding: 4rem;
  }
  #tokenomics h3 {
    max-width: 500px;
  }
  #tokenomics h6 {
    max-width: 500px;
  }
  #tokenomics p {
    max-width: 500px;
  }
}

#contacts {
  padding: 4rem;
}
#contacts h3 {
  max-width: 500px;
  margin: 0 auto;
  line-height: 1.6;
}
#contacts p {
  max-width: 500px;
  margin: 0 auto;
  line-height: 1.6;
}

#join {
  padding: 4rem;
}
#join h3 {
  max-width: 600px;
  margin: 0 auto;
  line-height: 1.6;
}
#join p {
  max-width: 600px;
  margin: 0 auto;
  line-height: 1.6;
}

#keys {
  border: 2px solid;
  border-color: var(--colorPrimary);
  max-width: 920px;
  margin: auto;
  display: flex;
  align-items: center;
  justify-content: center;
  text-align: center;
  padding: 2rem;
  flex-direction: column;
  margin-bottom: 10rem;
}

#keys h3 {
  color: red;
  background-color: #000;
  font-family: sans-serif;
}

#keys h6 {
  background-color: #000;
  padding: 2px 5px;
}


@keyframes fadeIn {
  from {
    opacity: 0;
    transform: translateY(10px);
  }
  to {
    opacity: 1;
    transform: translateY(0);
  }
}

@media (max-width: 920px) {
  #rules {
    background-size: 400px;
    border: 0px;
  }

  #keys {
    border: 0px;
  }
}

@media (max-width: 900px) {
  nav ul {
    flex-direction: column;
    gap: 1rem;
    /* to show menu items fast */
    animation: fadeIn 0.1s ease-out 0.1s forwards;
  }
}

@media (max-width: 768px) {
  h1 {
    font-size: 3rem;
  }

  h2 {
    font-size: 2.5rem;
  }

  h3 {
    font-size: 2rem;
  }

  h4 {
    font-size: 1.5rem;
  }

  h5 {
    font-size: 1.3rem;
  }

  h6 {
    font-size: 1.2rem;
  }

  p {
    font-size: 1rem;
  }
  #rules {
    background-size: 350px;
  }
}

@media (max-width: 640px) {
  #rules {
    background-size: 320px;
    background-position: right 5px bottom 20px;
  }
}

.token-header-container {
  border: 10px solid var(--colorPrimary);
  margin: 5rem;
  padding: 3rem 8rem;
}

@media (max-width: 640px) {
  .token-header-container {
    border: 2px solid var(--colorPrimary);
    margin: 1rem;
    padding: 2rem 6rem;
  }
}

#ethereum-address-to-copy {
  /* overflow-wrap: break-word; */
  /* white-space: pre-wrap; */
  word-break: break-all;
  min-width: 0;
}
/* ... */

